--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,10 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-    <dependency>
-      <groupId>io.quarkiverse.googlecloudservices</groupId>
-      <artifactId>quarkus-google-cloud-firestore</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.quarkiverse.googlecloudservices</groupId>-->
+<!--      <artifactId>quarkus-google-cloud-firestore</artifactId>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
@@ -54,6 +54,11 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.6</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
