--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ quarkus.datasource.db-kind = mariadb
 quarkus.datasource.username = root
 quarkus.datasource.password = admin
 quarkus.datasource.jdbc.url = jdbc:mariadb://localhost:3306/aa?autoReconnect=true&useSSL=false
+quarkus.http.port=8082
 
 # drop and create the database at startup (use `update`z    to only update the schema)
 #quarkus.hibernate-orm.database.generation = drop-and-create
