--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -75,7 +75,8 @@
 #   accessed directly. (example: "foo.example.com,bar.example.com")
 #
 ###
-FROM registry.access.redhat.com/ubi8/openjdk-17:1.11
+FROM quay.io/quarkus/centos-quarkus-mandrel:21.0.0.0-Final-java17 AS builder
+
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 
