--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 config.upload-dir=files
-quarkus.datasource.db-kind = mariadb
-quarkus.datasource.username = root
-quarkus.datasource.password = admin
-quarkus.datasource.jdbc.url = jdbc:mariadb://localhost:3306/aa?autoReconnect=true&useSSL=false
+# quarkus.datasource.db-kind = mariadb
+# quarkus.datasource.username = root
+# quarkus.datasource.password = admin
+# quarkus.datasource.jdbc.url = jdbc:mariadb://localhost:3306/aa?autoReconnect=true&useSSL=false
 quarkus.http.port=8082
 
 # drop and create the database at startup (use `update`z    to only update the schema)
 #quarkus.hibernate-orm.database.generation = drop-and-create
+
+# Datasource configuration
+quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
+quarkus.datasource.username=sa
+quarkus.datasource.password=
+quarkus.datasource.driver=org.h2.Driver
