add h2 + h2 console + close app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ quarkus.http.port=8082
 #quarkus.hibernate-orm.database.generation = drop-and-create
 
 # Datasource configuration
-quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
+#quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.url=jdbc:h2:./data/aa
+#quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 quarkus.datasource.username=sa
 quarkus.datasource.password=
-quarkus.datasource.driver=org.h2.Driver
+quarkus.hibernate-orm.database.generation=update
+#quarkus.datasource.driver=org.h2.Driver
