--- a/src/main/resources/META-INF/web.xml
+++ b/src/main/resources/META-INF/web.xml
@@ -6,7 +6,7 @@
 <web-app>
     <servlet>
         <servlet-name>H2Console</servlet-name>
-        <servlet-class>org.h2.server.web.WebServlet</servlet-class>
+        <servlet-class>org.h2.server.web.JakartaWebServlet</servlet-class>
         <init-param>
             <param-name>-webAllowOthers</param-name>
             <param-value>true</param-value>
